<resources>
    <string name="app_name">MyDoctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_date_and_time">Choose a date and time</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="choose_a_doctor">Choose a doctor</string>
    <string name="choose_a_hospital">Choose a hospital</string>
    <string name="calendar">CALENDAR</string>
    <string name="book_a_date">Book a date</string>
    <string name="profile_tab">Profile</string>
    <string name="calendar_tab">Calendar</string>
    <string name="diagnoses_tab">Diagnoses</string>
    <string name="prescriptions_tab">Prescriptions</string>
    <string name="prescriptions">PRESCRIPTIONS</string>
    <string name="diagnoses">DIAGNOSES</string>
    <string name="delete">Delete</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="save">Save</string>
    <string name="string_code">Code</string>
    <string name="doctor_email">Doctor Email</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_description">Diagnosis Description</string>
    <string name="prescription">Prescription</string>
    <string name="prescription_description">Prescription Description</string>
    <string name="string_category">Category</string>
    <string name="string_isi">isi</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="amka">AMKA</string>
    <string name="email">E-mail</string>
    <string name="gender">Gender</string>
    <string name="blood_type">Blood Type</string>
    <string name="personal_doctor">Personal Doctor</string>
    <string name="register">REGISTER</string>
    <string name="please_fill_your_personal_data_below">Please fill your personal data below</string>
    <string name="personal_data">PERSONAL DATA</string>
    <string-array name="hospitals">
        <item>Ippokrateio General Hospital of Athens</item>
        <item>Evangelismos General Hospital of Athens</item>
<!--        <item>Alexandra General Hospital of Athens</item>-->
<!--        <item>"Agia Eleni Spiliopouleio" Pathology Hospital of Athens</item>-->
<!--        <item>"Agios Savvas" General Cancer Hospital of Athens</item>-->
<!--        <item>General Hospital of Thessaloniki "St. Demetrios"</item>-->
<!--        <item>Ippokrateio General Hospital of Thessaloniki</item>-->
        <item>AHEPA Hospital</item>
<!--        <item>"Theagenio" Cancer Hospital of Thessaloniki</item>-->
<!--        <item>General Hospital of Thessaloniki "G.Gennimatas"</item>-->
<!--        <item>Patras General Hospital "Agios Andreas"</item>-->
<!--        <item>"Karamandaneio" Prefecture Children Hospital of Patras</item>-->
<!--        <item>General University Hospital of Patras</item>-->
<!--        <item>Venizelio Hospital of Heraclion</item>-->
<!--        <item>Asklepeion Crete</item>-->
<!--        <item>"Koutlimbaneio and Triantafylleio" General Hospital of Larissa</item>-->
<!--        <item>"Hippocrates" Maternal Hospital of Larissa</item>-->
<!--        <item>General Hospital of Veria</item>-->
<!--        <item>General Hospital of Tripoli Panarkadiko "Evangelistria"</item>-->
<!--        <item>General Hospital of Kavala</item>-->
    </string-array>
    <string-array name="doctors_0">
        <item>Panagiotis Papadopoulos</item>
        <item>Irini Markezou</item>
    </string-array>
    <string-array name="doctors_1">
        <item>Georgios Verros</item>
        <item>Anastasia Asimakopoulou</item>
    </string-array>
    <string-array name="doctors_2">
        <item>Dimitrios Evripiotis</item>
        <item>Aikaterini Mandrou</item>
    </string-array>
<!--    <string-array name="doctors_3">-->
<!--        <item>Stefanos Douliakas</item>-->
<!--        <item>Marianna Kourakou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_4">-->
<!--        <item>Maria Marou</item>-->
<!--        <item>Alexandros Fokas</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_5">-->
<!--        <item>Stavroula Niokou</item>-->
<!--        <item>Marios Andreou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_6">-->
<!--        <item>Georgios Nasiou</item>-->
<!--        <item>Despoina Xristodoulou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_7">-->
<!--        <item>Theodora Vasou</item>-->
<!--        <item>Filipos Anagnostopoulos</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_8">-->
<!--        <item>Christos Papadopoulos</item>-->
<!--        <item>Tereza Markezou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_9">-->
<!--        <item>Giannis Verros</item>-->
<!--        <item>Georgia Asimakopoulou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_10">-->
<!--        <item>Konstantinos Evripiotis</item>-->
<!--        <item>Theodosia Mandrou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_11">-->
<!--        <item>Antonis Douliakas</item>-->
<!--        <item>Kyriaki Kourakou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_12">-->
<!--        <item>Zina Marou</item>-->
<!--        <item>Achilleas Fokas</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_13">-->
<!--        <item>Marianna Niokou</item>-->
<!--        <item>Dimitrios Andreou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_14">-->
<!--        <item>Athanasios Nasiou</item>-->
<!--        <item>Panagiota Xristodoulou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_15">-->
<!--        <item>Dimitrios Skoutas</item>-->
<!--        <item>Eleni Pasxalidou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_16">-->
<!--        <item>Neophytos Evangelou</item>-->
<!--        <item>Eleni Pasxalidou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_17">-->
<!--        <item>Nikolaos Kyriakidis</item>-->
<!--        <item>Viktoria Tsavdaridou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_18">-->
<!--        <item>Ilias Giannakakos</item>-->
<!--        <item>Aikaterini Ioannou</item>-->
<!--    </string-array>-->
<!--    <string-array name="doctors_19">-->
<!--        <item>Stylianos Xanthis</item>-->
<!--        <item>Vasiliki Kakogianni</item>-->
<!--    </string-array>-->
    <string-array name="dates">
        <item>12/13/2021</item>
        <item>12/14/2021</item>
        <item>12/15/2021</item>
        <item>12/16/2021</item>
        <item>12/17/2021</item>
    </string-array>
    <string-array name="times">
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>17:30</item>
        <item>18:30</item>
        <item>19:30</item>
        <item>20:30</item>

    </string-array>
</resources>