<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout_diagnosis"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="16dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_doctor_email"
                android:layout_width="118dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:hint="@string/doctor_email"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_view_diagnosis"
                android:layout_width="241dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/diagnosis"
                android:textAlignment="center" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_diagnosis_description"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/diagnosis_description"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.cardview.widget.CardView>